--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,49 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^5.3.7",
-    "@google/generative-ai": "^0.24.0",
-    "antd": "^5.18.1",
-    "d3": "^7.9.0",
-    "next": "14.2.4",
-    "next-transpile-modules": "^10.0.1",
-    "openai": "^4.90.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "react-slick": "^0.30.2",
-    "recharts": "^2.13.2",
-    "rehype-raw": "^7.0.0",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.25.9",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"load-cfhub-data": "ts-node --project tsconfig.json src/scripts/loadDB.ts",
+		"read-cfhub-info": "ts-node --project tsconfig.json src/scripts/readCFHubInfo.ts",
+		"seed": "node --loader ts-node/esm src/scripts/loadDB.ts"
+	},
+	"dependencies": {
+		"@ant-design/icons": "^5.3.7",
+		"@datastax/astra-db-ts": "^1.5.0",
+		"@google/generative-ai": "^0.24.0",
+		"ai": "^4.2.11",
+		"antd": "^5.18.1",
+		"d3": "^7.9.0",
+		"dotenv": "^16.4.7",
+		"langchain": "^0.3.19",
+		"next": "14.2.4",
+		"next-transpile-modules": "^10.0.1",
+		"openai": "^4.90.0",
+		"puppeteer": "^24.5.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-markdown": "^9.0.1",
+		"react-slick": "^0.30.2",
+		"recharts": "^2.13.2",
+		"rehype-raw": "^7.0.0",
+		"remark": "^15.0.1",
+		"remark-gfm": "^4.0.0",
+		"remark-html": "^16.0.1",
+		"slick-carousel": "^1.8.1"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.25.9",
+		"@types/node": "^22.14.0",
+		"@types/react": "^19.1.0",
+		"@types/react-dom": "^19.1.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.2"
+	}
 }
