--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "cd frontend && npm run dev",
     "build": "next build",
     "export": "next build && next export",
     "start": "next start"
