--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@datastax/astra-db-ts": "^1.5.0",
+    "dotenv": "^16.4.7",
+    "langchain": "^0.3.20",
+    "openai": "^4.91.1",
+    "puppeteer": "^24.6.0"
+  }
 }
