--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"antd": "^5.18.1",
 		"d3": "^7.9.0",
 		"dotenv": "^16.4.7",
+		"firebase": "^11.6.0",
 		"langchain": "^0.3.19",
 		"next": "14.2.4",
 		"next-transpile-modules": "^10.0.1",
