Complete website redesign and fixes
- Redesigned header with 3-tier layout (top info bar, main header, main nav bar)
- Updated color scheme from green to CF Hub blue
- Replaced 'Viet Career Guide' branding with 'Career Foundation Hub'
- Created new components: BlogGrid, HeroSection, MorePrograms, SuccessStory, Trending
- Replaced LandYourDreamOffers with SuccessStory (3-column blog layout)
- Replaced OurProcess with Trending section
- Removed AboutUs and FAQ sections
- Fixed AntText component conflicts across all files
- Updated image paths to fix 404 errors
- Made Latest Insights section more compact
- Updated navbar styling and responsive design
- Fixed all runtime errors and port conflicts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "cd frontend && npm run dev",
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm run dev",
     "build": "next build",
     "export": "next build && next export",
     "start": "next start"
@@ -18,5 +20,8 @@
     "langchain": "^0.3.20",
     "openai": "^4.91.1",
     "puppeteer": "^24.6.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
