--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,19 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.18.2",
-		"mongoose": "^8.1.1",
 		"bcryptjs": "^2.4.3",
-		"jsonwebtoken": "^9.0.2",
 		"cors": "^2.8.5",
-		"dotenv": "^16.4.1"
+		"dotenv": "^16.4.1",
+		"express": "^4.18.2",
+		"express-mongo-sanitize": "^2.2.0",
+		"express-rate-limit": "^7.4.0",
+		"express-validator": "^7.2.1",
+		"firebase-admin": "^12.6.0",
+		"helmet": "^7.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.1.1",
+		"multer": "^1.4.5-lts.1",
+		"slugify": "^1.6.6"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.3"
