chore: migrate uploads to Cloudflare R2, add Netlify/Koyeb config and docs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,25 +1,54 @@
-# Backend Environment Variables Example
-# Copy to .env and fill in real values
+###############################################
+# Backend Environment Variables Example       #
+# Stack: Netlify (frontend) + Koyeb (backend) #
+#         Cloudflare R2 (images) + MongoDB    #
+###############################################
 
-# Port for Express (optional; defaults to 8008 if unset)
-# PORT=8008
+# ---- Core Server ----
+# Express port (Koyeb can override via PORT env)
+PORT=8008
 
-# Frontend origin allowed by CORS
-FRONTEND_URL=http://localhost:3000
-
-# MongoDB connection string
+# MongoDB connection (Atlas recommended for prod)
 # MONGODB_URI=mongodb://localhost:27017/cf_hub
-# or Atlas: mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
+# or Atlas:
+# MONGODB_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
+MONGODB_URI=
 
-# JWT signing secret (REQUIRED)
+# JWT signing secret (REQUIRED - set strong random string)
 JWT_SECRET=
 
-# Blog / API config
+# Base path the Express app mounts APIs under
 API_BASE_PATH=/api
 
-# Optional: Firebase Admin credentials (choose one)
+# ---- CORS / Frontend Origins ----
+# Primary frontend (Netlify production site)
+FRONTEND_URL=http://localhost:3000
+# Additional comma separated origins (e.g. Netlify preview URLs, local alt ports)
+ADDITIONAL_ORIGINS=
+
+# ---- Firebase Admin (Google Auth) ----
+# Provide ONE of these: base64 string or path to JSON file
 # FIREBASE_SERVICE_ACCOUNT_B64=<base64-encoded-JSON>
 # FIREBASE_SERVICE_ACCOUNT_FILE=/absolute/path/to/serviceAccount.json
 
-# Optional: CORS extra origins (comma separated)
-ADDITIONAL_ORIGINS=
+# ---- Cloudflare R2 (S3 Compatible Storage) ----
+# Account ID (used for constructing endpoint if custom not provided)
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET=cf-hub-uploads
+# Custom public base URL (e.g. a CDN or domain mapped to the bucket). If left blank, you can still generate object URLs via R2 endpoint + bucket + key if public.
+R2_PUBLIC_BASE_URL=
+# Optional fully-qualified S3 API endpoint (ex: https://<accountid>.r2.cloudflarestorage.com)
+R2_ENDPOINT=
+
+# Max upload size (MB) enforced by multer
+MAX_UPLOAD_MB=8
+
+# (Legacy) Remove any Vercel Blob tokens after migration
+# BLOB_READ_WRITE_TOKEN=
+
+# ---- Other Optional Config ----
+# LOG_LEVEL=info
+# RATE_LIMIT_WINDOW_MS=60000
+# RATE_LIMIT_MAX=120
