Admin inline edit + paste-to-cover; backend PUT/DELETE fixes; News=blog-only, CareerStories=success-only (limit 3); header on login/register; Fly config tweak

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -2,7 +2,7 @@
 # Docs: https://fly.io/docs/reference/configuration/
 
 app = "cf-hub-backend"
-primary_region = "iad" # change to a region near your DB (e.g., "sjc", "lhr")
+primary_region = "iad"
 
 [build]
   # Uses Dockerfile in backend/
@@ -11,18 +11,14 @@ primary_region = "iad" # change to a region near your DB (e.g., "sjc", "lhr")
   NODE_ENV = "production"
   API_BASE_PATH = "/api"
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = false   # keep always-on if you choose dedicated; Machines free tier may still scale to zero
-  auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
-
+# This block defines the service, its ports, and its health checks.
 [[services]]
   internal_port = 8080
   protocol = "tcp"
   processes = ["app"]
+  auto_stop_machines = false
+  auto_start_machines = true
+  min_machines_running = 1
 
   [[services.ports]]
     handlers = ["http"]
@@ -35,11 +31,11 @@ primary_region = "iad" # change to a region near your DB (e.g., "sjc", "lhr")
   [[services.tcp_checks]]
     interval = "15s"
     timeout = "2s"
-
-# Optional health check hitting /api/health
-[[checks]]
-  http_path = "/api/health"
-  grace_period = "10s"
-  interval = "15s"
-  method = "get"
-  timeout = "2s"
+  
+  # This health check is now correctly associated with the service above.
+  [[services.http_checks]]
+    path = "/api/health" # Note: key is 'path', not 'http_path'
+    grace_period = "10s"
+    interval = "15s"
+    method = "get"
+    timeout = "2s"
