--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
 		"express-rate-limit": "^7.4.0",
 		"express-validator": "^7.2.1",
 		"firebase-admin": "^12.6.0",
+		"googleapis": "^134.0.0",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.1",
