--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,10 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"remark-html": "^16.0.1",
-		"slick-carousel": "^1.8.1"
+		"slick-carousel": "^1.8.1",
+		"react-quill": "^2.0.0",
+		"quill": "^1.3.7"
+		,"sanitize-html": "^2.13.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.25.9",
